# plutsgrip-app

./: .env.dev  .env.example  .env.prod  .gitignore  CONTRIBUTING.md  CORREÇÃO_MISSINGGREENLET.md  DEPLOY_GUIDE.md  DOCKER_README.md  Dockerfile  GUIA_ORGANIZACAO.md  Makefile  PYDANTIC_SQLALCHEMY_FIX_REPORT.md  README.md  RESUMO_FINAL.txt  SETUP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-manage.bat  docker-manage.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
plutsgrip-api/: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.development.yml  docker-compose.production.yml  docker-dev.bat  docker-dev.sh  docker-prod.sh  init-db.sql  main.py  nginx.conf  pyproject.toml  requirements.txt
plutsgrip-api/.claude/: BEFORE_AFTER_EXAMPLES.md  PYDANTIC_SQLALCHEMY_FIX.md  settings.local.json
plutsgrip-api/alembic/: README  env.py
plutsgrip-api/alembic/versions/: 20251029_1919_a4156668e5e1_p0_2_add_users_categories_transactions.py  20251104_1425_add_budgets_goals_recurring.py  20260106_1313_744169700429_add_trusted_ips_table.py  20260106_add_rate_limit_whitelist.py
plutsgrip-api/app/: __init__.py
plutsgrip-api/docs/: AUTHENTICATION.md  arquitetura.md  banco-dados.md  database-diagram-mvp.puml  database-diagram.puml  endpoints-api.md  guia-setup.md  schema.sql
plutsgrip-api/scripts/: seed_categories.py
plutsgrip-api/seeds/: seed_data.py
plutsgrip-api/tests/: conftest.py  test_auth.py
(+236 files in other folders)
